--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,13 @@
 {
-  "name": "sass-mediaqueries",
-  "version": "1.3",
-  "homepage": "https://github.com/paranoida/sass-mediaqueries",
+  "name": "sass-mediaqueries-bullie8proof",
+  "version": "2.0",
+  "homepage": "https://github.com/guyhughes/sass-mediaqueries-bullie8proof",
   "authors": [
+    "Guy Hughes <guy@guyhughes.ca>",
+    "Jake Archibald <jaffathecake@gmail.com>",
     "Rafal Bromirski <rafal.bromirski@gmail.com>"
   ],
-  "description": "It is a collection of useful media queries mixins for Sass. Great extension for compass or bourbon.",
+  "description": "A collection of useful media queries mixins for Sass. Great extension for compass or bourbon. Now supports bullie8proofing mediaqueries from  lt IE 9 using Jake Archibald's method.",
   "main": "_media-queries.scss",
   "keywords": [
     "sass",
